2005-03-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* game.c (start_new_game): Make New Game record the score. This
	brings it into line with the other game and sots half of bug
	#107846.

2005-03-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnobots2.xml: Bump the app version number. No revisions.

2005-02-02  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnobots.c (main): 
	* graphics.c (load_game_graphics): Make sure that we have at least
	one theme. If not, complain.

2005-02-01  Callum McKenzie  <callum@physics.otago.ac.nz>

	* help/C/gnobots2.xml: Documentation updates from Adam Weinberger
	(bug #165575).

2004-11-21  Callum McKenzie  <callum@physics.otago.ac.nz>

	* gnobots2.soundlist.in (_description): Fix the description.

2004-09-09  callum  <callum@spooky-possum.org>

	* help/C/figures/gnobots2-main.png:
	* help/C/gnobots2.xml: Updates for 2.8.

2004-08-15  Callum McKenzie  <callum@physics.otago.ac.nz>

	* cows.png:
	* eggs.png:
	* mice.png:
	* windows.png: Moved these themes to the gnome-games-extra-data
	package.
	
2004-07-20  Christian Neumair  <chris@gnome-de.org>

	* graphics.c (load_bubble_graphic): Assimilate gettextized warning to
	other ones.

2004-07-18  Callum McKenzie  <callum@physics.otago.ac.nz>

	* properties.c: Convert the keyboard control list to Paolo's
	games_controls_list.

2004-07-05  Callum McKenzie  <callum@physics.otago.ac.nz>

	* game.c:
	* game.h:
	* cursors.c:
	* cursors.h:	
	* gnobots.c: Provide cursor hints to show which way clicking the
	mouse will take you.

2004-06-30  Callum McKenzie  <callum@physics.otago.ac.nz>

	* teleport.png:
	* rteleport.png:
	* menu.c: Add custom menu icons for teleport and rteleport.

2004-06-23  Callum McKenzie  <callum@physics.otago.ac.nz>

	* game.c: 
	* menu.h:	
	* menu.c: Add menu items and a toolbar for the commands like
	teleport, wait, etc. Also includes logic to correctly set
	sensitivity.

2004-06-22  Callum McKenzie  <callum@physics.otago.ac.nz>
